k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-client
  namespace: devops
spec:
  selector:
    app: k8s-client
  ports:
    - port: 80
      targetPort: 80
